--- a/content/page1.tex
+++ b/content/page1.tex
@@ -1,7 +1,7 @@
 
-\section{Standard Slides}
+\section{Standard Slides}\label{sec:standard-slides}
 
-\subsection{Text Only}
+\subsection{Text Only}\label{ssec:text-only}
 
 \begin{frame}
 	\frametitle{Default Text Slide}
@@ -9,7 +9,7 @@
 	Vero minima pariatur ea itaque natus in. In quidem non error fugiat tempore aliquid magni. Animi aliquam voluptatum eum. Delectus voluptate illum quidem et autem.
 \end{frame}
 
-\subsection{Lists}
+\subsection{Lists}\label{ssec:lists}
 
 \begin{frame}
 	\frametitle{Itemize and Listing}
@@ -27,19 +27,19 @@
 	\end{itemize}
 \end{frame}
 
-\subsection{Graphics}
+\subsection{Graphics}\label{ssec:graphics}
 
 \frame[plain]{
 	\frametitle{Include an Image}
 	\includegraphics[width=0.5\linewidth]{./assets/overview.png}
 }
 
-\section{Include Source Code}
+\section{Include Source Code}\label{sec:include-source-code}
 
 \begin{frame}[fragile]
 \frametitle{Some Simple C Code}
 
-\begin{lstlisting}[caption=Some JavaScript code]
+\begin{lstlisting}[caption=Some JavaScript code,label={lst:lstlisting}]
 var x = 3;
 var y = 5;
 
@@ -60,7 +60,7 @@ console.log("bla");
 \end{lstlisting}
 \end{frame}
 
-\section{Columns on Slides}
+\section{Columns on Slides}\label{sec:columns-on-slides}
 
 \begin{frame}
 	\frametitle{Example of columns 2}
@@ -76,7 +76,7 @@ console.log("bla");
 \end{frame}
 
 
-\section{Blocks on Slides}
+\section{Blocks on Slides}\label{sec:blocks-on-slides}
 
 
 \begin{frame}
@@ -90,7 +90,7 @@ console.log("bla");
    \end{alertblock}
 
    \begin{exampleblock}{This is an Example block}
-   This is an example 
+   This is an example
    \end{exampleblock}
 
 \end{frame}
